--- a/skim/Cargo.toml
+++ b/skim/Cargo.toml
@@ -27,7 +27,7 @@ unicode-width = "0.2.0"
 log = "0.4.26"
 env_logger = { version = "0.11.6", optional = true }
 time = "0.3.39"
-clap = { version = "4.5.32", optional = true, features = ["cargo", "derive", "unstable-markdown"] }
+clap = { version = "4.5.32", features = ["cargo", "derive", "unstable-markdown"] }
 tuikit = "0.5.0"
 vte = "0.15.0"
 fuzzy-matcher = "0.3.7"
@@ -46,4 +46,4 @@ shell-quote = "0.7.2"
 
 [features]
 default = ["cli"]
-cli = ["dep:clap", "dep:shlex", "dep:env_logger"]
+cli = ["dep:shlex", "dep:env_logger"]
